noinst_LTLIBRARIES = libreplace.la

libreplace_la_SOURCES = \
	bsd-asprintf.c \
	bsd-misc.c \
	bsd-poll.c \
	bsd-poll.h \
	bsd-snprintf.c \
	bsd-waitpid.c \
	bsd-waitpid.h \
	daemon.c \
	fake-rfc2553.c \
	fake-rfc2553.h \
	getpeereid.c \
	os_dep.h \
	setenv.c \
	strlcat.c \
	strlcpy.c \
	strsep.c \
	strtoll.c \
	strtonum.c